# static-router

./: Cargo.toml  readme.md
benches/: bench.rs
macros/: Cargo.toml
src/: lib.rs
